--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport"
-content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-content="Specialisti in progettazione, installazione e manutenzione di impianti
-elettrici certificati, domotici e fotovoltaici. Preventivi gratuiti." />
-    <title>FLASH Impianti - La Tua Energia a
-Norma</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Specialisti in progettazione, installazione e manutenzione di impianti elettrici certificati, domotici e fotovoltaici. Preventivi gratuiti." />
+    <title>FLASH Impianti - La Tua Energia a Norma</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module"
-src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
